basic entities have been added

--- a/recipe-manager-backend/src/main/resources/application.properties
+++ b/recipe-manager-backend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=recipe-manager-backend
+spring.datasource.url=jdbc:postgresql://${DB_URL}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
